# spendio

./: .env  Cargo.toml
migrations/: 20260210013453_create_user_table.sql  20260210021620_create_categories_table.sql  20260210022539_create_transactions_table.sql
src/: main.rs  utils.rs
src/controllers/: auth.rs  categories.rs  me.rs  mod.rs  transactions.rs
src/db/: categories.rs  mod.rs  transactions.rs  user.rs
src/middleware/: auth.rs
