[package]
name = "spendio"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bcrypt = "0.18.0"
jsonwebtoken = "10.3.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

